@@ -14,3 +14,7 @@ A::Depends(\partial).
 \end{screen}
 Without the accent property, \verb|\hat{A}| object would be a
 completely independent object, unrelated to \verb|A|.
+
+\cdbseeprop{PropertyInherit}
+\cdbseeprop{IndexInherit}
+
