@@ -2,6 +2,6 @@
 
 Indicates that an object should inherit all properties of the objects
 they wrap. In most cases, the use of \subsprop{Accent} is more
-appropriate.
+appropriate, since it also makes objects inherit indices.
 
 \cdbseeprop{Accent}
