@@ -50,7 +50,7 @@
 
 <p>
   
-    <a href="unassigned.html">12 unassigned issues</a> (nine open).
+    <a href="unassigned.html">13 unassigned issues</a> (ten open).
   
 </p>
 
@@ -62,6 +62,15 @@
   <tbody>
   
     <tr class="even-row">
+      <td class="date">2009-05-26</td>
+      <td class="issuename">
+        <a href="issue-0129edd57e7b9ea4932040eeb5d1ba7e83a939db.html">Inherit<...> is not flexible enough</a> 
+      </td>
+      <td> created </td>
+    </tr>
+    <tr><td></td></tr>
+  
+    <tr class="odd-row">
       <td class="date">2009-01-21</td>
       <td class="issuename">
         <a href="issue-248630fcbe40bd59f52429e99de2b43488b5e8b8.html">Nested \partial's do not always flatten automatically.</a> <img src="green-check.png" class="inline-status-image" title="fixed" alt="fixed"/>
@@ -70,7 +79,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-01-21</td>
       <td class="issuename">
         <a href="issue-275e6042623fde84879a0c1864f064559562ed3c.html">XCadabra breaks when a .cadabra is present</a> <img src="green-check.png" class="inline-status-image" title="fixed" alt="fixed"/>
@@ -79,7 +88,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-01-21</td>
       <td class="issuename">
         <a href="issue-df1fa81e6c1c2d90a3b0ff531a9696ace2a12de3.html">Crash with tensors in numerators</a> <img src="green-check.png" class="inline-status-image" title="fixed" alt="fixed"/>
@@ -88,7 +97,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-01-19</td>
       <td class="issuename">
         <a href="issue-df1fa81e6c1c2d90a3b0ff531a9696ace2a12de3.html">Crash with tensors in numerators</a> <img src="green-check.png" class="inline-status-image" title="fixed" alt="fixed"/>
@@ -97,7 +106,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-01-03</td>
       <td class="issuename">
         <a href="issue-f896ffe43c8b780b98fde4d37b71d683af775a99.html">@canonicalise does not honor ImplicitIndex</a> 
@@ -106,7 +115,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2008-12-11</td>
       <td class="issuename">
         <a href="issue-67f410348cb3e122b6f7541db7fccddb3cc08e9e.html">Introduce a notation for 'a range of objects'</a> 
@@ -115,7 +124,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2008-11-24</td>
       <td class="issuename">
         <a href="issue-248630fcbe40bd59f52429e99de2b43488b5e8b8.html">Nested \partial's do not always flatten automatically.</a> <img src="green-check.png" class="inline-status-image" title="fixed" alt="fixed"/>
@@ -124,7 +133,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2008-11-17</td>
       <td class="issuename">
         <a href="issue-9bc33d2ce36bc0dd67c03d09cc1c2ab5e9eba099.html">Single-factor replacements with dummy names fail.</a> 
@@ -133,19 +142,10 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
-      <td class="date">2008-11-14</td>
-      <td class="issuename">
-        <a href="issue-becb40c03914860dbc07ef30bb8fb898a9089a73.html">@eliminate_kr does not work on sums</a> 
-      </td>
-      <td> created </td>
-    </tr>
-    <tr><td></td></tr>
-  
     <tr class="odd-row">
       <td class="date">2008-11-14</td>
       <td class="issuename">
-        <a href="issue-275e6042623fde84879a0c1864f064559562ed3c.html">XCadabra breaks when a .cadabra is present</a> <img src="green-check.png" class="inline-status-image" title="fixed" alt="fixed"/>
+        <a href="issue-becb40c03914860dbc07ef30bb8fb898a9089a73.html">@eliminate_kr does not work on sums</a> 
       </td>
       <td> created </td>
     </tr>
