@@ -19,6 +19,21 @@
   <tbody>
   
     <tr>
+      <td>  </td>
+      <td class="littledate">2009-05-26</td>
+      <td class="issuename">
+        <a href="issue-0129edd57e7b9ea4932040eeb5d1ba7e83a939db.html">Inherit<...> is not flexible enough</a>
+      </td>
+      
+        <td class="issuerelease">
+          
+          
+        </td>
+      
+      
+    </tr>
+  
+    <tr>
       <td> <img src="green-check.png" title="fixed" alt="fixed"/> </td>
       <td class="littledate">2009-01-19</td>
       <td class="issuename">
